Squash overflow bug

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -13,7 +13,6 @@ body {
     -ms-overflow-style: none; /* for Internet Explorer, Edge */
     scrollbar-width: none; /* for Firefox */
     overflow-x: hidden;
-    overflow-y: hidden;
 }
 
 .navigation-desktop {
